Opened 14 years ago
Closed 14 years ago
#7437 closed bug (fixed)
Tiled windows don't heed the magnetic edges
Reported by: | humdinger | Owned by: | czeidler |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Add-Ons/Decorators/Default | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev41193.
Haiku's screen edges are slightly magnetic (could be a bit stronger IMO), so windows experience a little resistence when moving them out of the screen.
If you tile two windows together, this resistence is not felt around the new "compounded" border, but remains at the borders of the window you grab to move the tiled window group.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev42378. Thanks!