The complete S&T group has an additional, surrounding magnetic border now. Fixes #7437.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42378 a95241bf-73f2-0310-859d-f6bbb57e9c96